welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: ';' expected but '(' found.
  var T:Array(Int)(5*num)
             ^